// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package models

import (
	"time"

	"github.com/google/uuid"
	"gorm.io/datatypes"
	"gorm.io/gorm"
)

// Location Physical or virtual location within a world
type Location struct {
	// Unique identifier - use
	ID uuid.UUID `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid();comment:Unique identifier - use" json:"id"`
	// Timestamp when the record was created
	CreatedAt time.Time `gorm:"column:created_at;type:timestamptz;autoCreateTime;not null;comment:Timestamp when the record was created" json:"createdAt"`
	// Timestamp of the last update - omit in extending model to skip
	UpdatedAt *time.Time `gorm:"column:updated_at;type:timestamptz;comment:Timestamp of the last update - omit in extending model to skip" validate:"omitempty" json:"updatedAt,omitempty"`
	// Soft delete timestamp - null if active, set to deletion time when "deleted".
	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;index;comment:Soft delete timestamp - null if active, set to deletion time when 'deleted'." json:"deletedAt"`
	// Name of the location - indexed for lookup, max 200 characters
	Name string `gorm:"column:name;type:varchar(200);not null;index:locations_name_idx;comment:Name of the location - indexed for lookup, max 200 characters" validate:"required,max=200" json:"name"`
	// Narrative description used in AI generation
	Description string `gorm:"column:description;type:text;not null;comment:Narrative description used in AI generation" validate:"required" json:"description"`
	// Bounding box or point stored as GeoJSON
	Coordinates *datatypes.JSON `gorm:"column:coordinates;type:jsonb;comment:Bounding box or point stored as GeoJSON" validate:"omitempty" json:"coordinates,omitempty"`
	WorldID     uuid.UUID       `gorm:"column:world_id;type:uuid;not null" validate:"required" json:"worldId"`

	// ─── Relationships ─────────────────────
	// World this location belongs to - cascades deletion
	World World `gorm:"foreignKey:WorldID;constraint:OnDelete:CASCADE,OnUpdate:CASCADE" json:"world"`
}

// TableName returns the table name for Location.
func (Location) TableName() string {
	return "locations"
}
