// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package models

import (
	"time"

	"github.com/google/uuid"
	"gorm.io/gorm"
)

// Tag Tag used to classify and filter content pool entries. The (world_id, name) pair is globally unique per world.
type Tag struct {
	// Unique identifier - use
	ID uuid.UUID `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid();comment:Unique identifier - use" json:"id"`
	// Timestamp when the record was created
	CreatedAt time.Time `gorm:"column:created_at;type:timestamptz;autoCreateTime;not null;comment:Timestamp when the record was created" json:"createdAt"`
	// Timestamp of the last update - omit in extending model to skip
	UpdatedAt *time.Time `gorm:"column:updated_at;type:timestamptz;comment:Timestamp of the last update - omit in extending model to skip" validate:"omitempty" json:"updatedAt,omitempty"`
	// Soft delete timestamp - null if active, set to deletion time when "deleted".
	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;index;comment:Soft delete timestamp - null if active, set to deletion time when 'deleted'." json:"deletedAt"`
	// Tag name - max 100 characters, unique within its world
	Name string `gorm:"column:name;type:varchar(100);not null;uniqueIndex:tags_world_id_name_unique,priority:2;comment:Tag name - max 100 characters, unique within its world" validate:"required,max=100" json:"name"`
	// Category used to group related tags - indexed for filtering, max 50 characters
	Category string    `gorm:"column:category;type:varchar(50);not null;index:tags_category_idx;comment:Category used to group related tags - indexed for filtering, max 50 characters" validate:"required,max=50" json:"category"`
	WorldID  uuid.UUID `gorm:"column:world_id;type:uuid;not null;uniqueIndex:tags_world_id_name_unique,priority:1" validate:"required" json:"worldId"`

	// ─── Relationships ─────────────────────
	// World this tag belongs to - cascades deletion
	World World `gorm:"foreignKey:WorldID;constraint:OnDelete:CASCADE,OnUpdate:CASCADE" json:"world"`
}

// TableName returns the table name for Tag.
func (Tag) TableName() string {
	return "tags"
}
