// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package schema

import (
	"entgo.io/ent"
	"entgo.io/ent/dialect/entsql"
	entschema "entgo.io/ent/schema"
	"entgo.io/ent/schema/edge"
	"entgo.io/ent/schema/field"
	"entgo.io/ent/schema/index"
	"github.com/google/uuid"
	"time"
)

// AuditLog Immutable audit-log entry. Lives in its own namespace even though it references other bounded contexts.
type AuditLog struct {
	ent.Schema
}

func (AuditLog) Annotations() []entschema.Annotation {
	return []entschema.Annotation{
		entsql.Annotation{Table: "audit_logs"},
		entsql.WithComments(true),
	}
}

func (AuditLog) Fields() []ent.Field {
	return []ent.Field{
		field.Int64("id").
			Positive().
			Comment("Auto-incrementing surrogate key for stable ordering.").
			Immutable(),
		field.String("entity_type").
			MaxLen(100).
			Comment("Logical type of the changed entity, e.g. \"World\" or \"StoryNode\"."),
		field.UUID("entity_id", uuid.UUID{}).
			Comment("Primary key of the changed entity."),
		field.String("action").
			MaxLen(50).
			Comment("Action performed: create, update, or delete."),
		field.JSON("diff", map[string]any{}).
			Comment("Optional JSON snapshot or diff.").
			Optional(),
		field.UUID("actor_id", uuid.UUID{}).
			Comment("Nullable so audit history survives account deletion.").
			Optional().
			Nillable(),
		field.String("world_slug").
			MaxLen(80).
			Comment("Optional world slug snapshot for human-friendly correlation in logs. Demonstrates a relation that targets a non-id unique column.").
			Optional().
			Nillable(),
		field.Time("created_at").
			Default(time.Now).
			Immutable(),
	}
}

func (AuditLog) Edges() []ent.Edge {
	return []ent.Edge{
		edge.To("actor", User.Type).
			Field("actor_id").
			Unique().
			Annotations(entsql.OnDelete(entsql.SetNull)),
		edge.To("world_context", World.Type).
			Field("world_slug").
			Unique().
			Annotations(entsql.OnDelete(entsql.SetNull)),
	}
}

func (AuditLog) Indexes() []ent.Index {
	return []ent.Index{
		index.Fields("entity_type"),
		index.Fields("entity_type", "entity_id"),
		index.Fields("actor_id", "created_at"),
	}
}
