// Code generated by @qninhdt/typespec-gorm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package models

import (
	"time"

	"github.com/google/uuid"
	"gorm.io/datatypes"
	"gorm.io/gorm"
)

// StoryNode Node in a lazily-generated story tree. Stores the cumulative content-pool IDs inherited from all ancestor nodes.
type StoryNode struct {
	// Unique identifier - use
	ID uuid.UUID `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid();comment:Unique identifier - use" json:"id"`
	// Timestamp when the record was created
	CreatedAt time.Time `gorm:"column:created_at;type:timestamptz;autoCreateTime;not null;comment:Timestamp when the record was created" json:"createdAt"`
	// Timestamp of the last update - omit in extending model to skip
	UpdatedAt *time.Time `gorm:"column:updated_at;type:timestamptz;comment:Timestamp of the last update - omit in extending model to skip" validate:"omitempty" json:"updatedAt,omitempty"`
	// Soft delete timestamp - null if active, set to deletion time when "deleted".
	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;index;comment:Soft delete timestamp - null if active, set to deletion time when 'deleted'." json:"deletedAt"`
	// Depth of this node in the story tree - root is 0
	Depth int32 `gorm:"column:depth;type:integer;not null;index:story_nodes_depth_idx;index:story_nodes_world_id_depth_idx,priority:2;default:0;comment:Depth of this node in the story tree - root is 0" validate:"required" json:"depth"`
	// Cumulative pool - NPC, tag, event, and location IDs from all ancestors
	Pool datatypes.JSON `gorm:"column:pool;type:jsonb;not null;comment:Cumulative pool - NPC, tag, event, and location IDs from all ancestors" validate:"required" json:"pool"`
	// Content introduced at this specific node
	NewContent datatypes.JSON `gorm:"column:new_content;type:jsonb;not null;comment:Content introduced at this specific node" validate:"required" json:"newContent"`
	// IDs of lazily-expanded child nodes
	ChildIDs datatypes.JSON `gorm:"column:child_ids;type:jsonb;not null;comment:IDs of lazily-expanded child nodes" validate:"required" json:"childIds"`
	// Foreign key to World - required
	WorldID uuid.UUID `gorm:"column:world_id;type:uuid;not null;index:story_nodes_world_id_depth_idx,priority:1;comment:Foreign key to World - required" validate:"required" json:"worldId"`
	// Foreign key to parent StoryNode - nullable for root nodes
	ParentID *uuid.UUID `gorm:"column:parent_id;type:uuid;comment:Foreign key to parent StoryNode - nullable for root nodes" validate:"omitempty" json:"parentId,omitempty"`

	// ─── Relationships ─────────────────────
	// World this story node belongs to - cascades deletion
	World  World      `gorm:"foreignKey:WorldID;constraint:OnDelete:CASCADE,OnUpdate:CASCADE" json:"world"` // Parent node in the story tree - null for root nodes
	Parent *StoryNode `gorm:"foreignKey:ParentID;constraint:OnDelete:CASCADE" json:"parent,omitempty"`
}

// TableName returns the table name for StoryNode.
func (StoryNode) TableName() string {
	return "story_nodes"
}
