// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package accounts

import (
	"time"

	"github.com/google/uuid"
	"gorm.io/gorm"
)

// UserRole represents the user_role enum.
type UserRole string

const (
	UserRolePlayer    UserRole = "player"
	UserRoleModerator UserRole = "moderator"
	UserRoleAdmin     UserRole = "admin"
)

// User Registered player account.
type User struct {
	// Unique identifier shared by most persisted records.
	ID uuid.UUID `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid();comment:Unique identifier shared by most persisted records." json:"id"`
	// Timestamp when the record was created.
	CreatedAt time.Time `gorm:"column:created_at;type:timestamptz;autoCreateTime;not null;comment:Timestamp when the record was created." json:"createdAt"`
	// Timestamp of the last update.
	UpdatedAt *time.Time `gorm:"column:updated_at;type:timestamptz;comment:Timestamp of the last update." validate:"omitempty" json:"updatedAt,omitempty"`
	// Soft delete marker for archival workflows.
	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;index;uniqueIndex:users_email_deleted_at_unique,priority:2;comment:Soft delete marker for archival workflows." json:"deletedAt"`
	// Email address used for login and invitations. Other namespaces reference this via lookup types.
	Email string `gorm:"column:email;type:varchar(320);not null;uniqueIndex:users_email_deleted_at_unique,priority:1;comment:Email address used for login and invitations. Other namespaces reference this via lookup types." validate:"required,max=320,email" json:"email"`
	// Hashed password - never expose or store plain text credentials.
	PasswordHash string `gorm:"column:password_hash;type:varchar(255);not null;comment:Hashed password - never expose or store plain text credentials." validate:"required" json:"passwordHash"`
	// Display name shown throughout the UI.
	DisplayName string `gorm:"column:display_name;type:varchar(100);not null;comment:Display name shown throughout the UI." validate:"required,max=100" json:"displayName"`
	// Public avatar URL rendered in lists and profile cards.
	AvatarURL *string `gorm:"column:avatar_url;type:varchar(512);comment:Public avatar URL rendered in lists and profile cards." validate:"omitempty,max=512,url" json:"avatarUrl,omitempty"`
	// Optional locale preference for formatting and localization.
	PreferredLocale *string `gorm:"column:preferred_locale;type:varchar(16);comment:Optional locale preference for formatting and localization." validate:"omitempty,max=16" json:"preferredLocale,omitempty"`
	// Entitlement credits or consumable balance.
	Credits int32 `gorm:"column:credits;type:integer;not null;default:0;comment:Entitlement credits or consumable balance." validate:"required" json:"credits"`
	// Role used by moderation features and internal tooling.
	Role UserRole `gorm:"column:role;type:varchar(20);not null;index:users_role_idx;default:player;comment:Role used by moderation features and internal tooling." validate:"oneof=player,moderator,admin" json:"role"`
	// Whether the account is currently active.
	IsActive bool `gorm:"column:is_active;type:boolean;not null;default:true;comment:Whether the account is currently active." json:"isActive"`
	// Example of a computed UI field excluded from persistence.
	FullTitle *string `gorm:"-" json:"fullTitle,omitempty"`

	// ─── Relationships ─────────────────────
	// Billing subscriptions tied to the account.
	Subscriptions []Subscription `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE,OnUpdate:CASCADE" json:"subscriptions,omitempty"`
}

// TableName returns the table name for User.
func (User) TableName() string {
	return "users"
}
